refactor(gui): introduce ZenHolder anti-dupe base and sanitize English Javadocs